--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -1,8 +1,9 @@
 /*variable*/
 
-@color1: #ed5856;
-@color2: rgba(237,88,86,0.8);
-@color3: #bf4846;
+@color1: 		#ed5856;
+@color2: 		fade(@color1, 80%);
+@color1darken: 	darken(@color1, 15%);
+@color3: 		desaturate(@color1darken, 30%);
 
 
 /*animation*/
