--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -318,8 +318,8 @@ body {
   display: none;
   position: fixed;
   background-color: #ed5664;
-  bottom: 0;
-  height: 60px;
+  top: 72px;
+  height: 10px;
   width: 100%;
   z-index: 999999;
   animation: progress-bar-stripes 1s linear infinite;
@@ -475,6 +475,7 @@ body {
   height: 290px;
   background: transparent url('../img/photo.png') repeat center bottom;
   display: block;
+  -webkit-filter: grayscale(1);
 }
 /*#about #photo-wrap #trapeze{
 					width:1px;
@@ -910,6 +911,10 @@ body {
   }
   #book .item {
     margin-top: 15px;
+  }
+  .loader {
+    top: 0px;
+    height: 10px;
   }
   /*AWWWARDS//////////////*/
   #awwwards {
