--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -291,8 +291,8 @@ body {
 
 	position: fixed;
 	background-color: @color1;
-	bottom: 0;
-	height: 60px;
+	top: 72px;
+	height: 10px;
 	width: 100%;
 	z-index: 999999;
 	animation: progress-bar-stripes 1s linear infinite;
@@ -487,6 +487,7 @@ body {
 					height:290px;
 					background:transparent url('../img/photo.png') repeat center bottom;
 					display:block;
+					-webkit-filter: grayscale(1);
 				}
 				
 				/*#about #photo-wrap #trapeze{
@@ -1065,6 +1066,11 @@ body {
 		margin-top: 15px;
 	}
 	
+
+	.loader{
+		top: 0px;
+		height: 10px;
+	}
 	
 	
 	
